--- a/.drone.yml
+++ b/.drone.yml
@@ -43,3 +43,5 @@ steps:
       - cd /home/developer/Atmosphere/Atmosphere/
       - sudo docker-compose down
       - sudo docker-compose up -d
+      - sudo docker image prune
+      - sudo docker volume prune
