--- a/.github/workflows/actions-demo.yml
+++ b/.github/workflows/actions-demo.yml
@@ -41,4 +41,4 @@ jobs:
         run: ssh-keyscan -H ${{ secrets.SSH_HOST_ATMOSPHERE }} >> ~/.ssh/known_hosts
 
       - name: Deploy in server
-        run: ssh ${{ secrets.SSH_USER_ATMOSPHERE }}@${{ secrets.SSH_HOST_ATMOSPHERE }} 'sudo cd '"${{secrets.SSH_HOST_DIR_ATMOSPHERE}}"' && VERSION_TAG='"$GITHUB_SHA"' docker-compose up -d'
+        run: ssh ${{ secrets.SSH_USER_ATMOSPHERE }}@${{ secrets.SSH_HOST_ATMOSPHERE }} 'cd '"${{secrets.SSH_HOST_DIR_ATMOSPHERE}}"' && VERSION_TAG='"$GITHUB_SHA"' sudo docker-compose up -d'
