--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi>=0.68.0,<0.69.0
 pydantic>=1.8.0,<2.0.0
 uvicorn>=0.15.0,<0.16.0
+fastapi-mail==1.0.8
 captcha==0.3
 GitPython==3.1.24
 docker==5.0.3
